# lidar-processor

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  INSTALL_MACOS.md  INSTALL_UBUNTU.md  INSTALL_WINDOWS.md  LICENSE  LOCALIZATION.md  README.md  main.cpp  processor.hpp  viewer.hpp
.github/workflows/: ci.yml
compute/: Consumer.hpp  Filter.hpp  GPSAligner.hpp  IMUProcessor.hpp  Processor.h  Producer.hpp  Transformer.hpp
compute/IMU/: AHRSFilter.h
compute/IMU/FusionAHRS/: FusionAhrs.c  FusionBias.c  FusionCompass.c  FusionFilter.hpp  FusionTypes.h
compute/IMU/MadgwickAHRS/: MadgwickAHRS.cpp  MadgwickAHRS.h  MadgwickFilter.hpp
compute/calculators/: Calculator.h  GPSCalculator.hpp  GPSPacketCalculator.hpp  ICPSLAMCalculator.hpp  LOAMSLAMCalculator.hpp
compute/calculators/GPSExtrapolationStrategy/: EKFExtrapolationStrategy.hpp  GPSExtrapolationStrategy.hpp  PoliExtrapolationStrategy.hpp
doc/: INSTALL_MACOS.md  INSTALL_UBUNTU.md  INSTALL_WINDOWS.md  INSTALL_WINDOWS_WSL.md  LOCALIZATION_GNSS.md
grabber/: GPSPacket.h  GPSVLPGrabber.cpp  GPSVLPGrabber.h  NmeaParser.cpp  NmeaParser.h
helpers/: CsvFileWriter.h  FileHelper.cpp  FileHelper.h  GPSExtrapolationHelper.hpp  GPSHelper.cpp  GPSHelper.h  IMUHelper.h  KalmanHelper.cpp  KalmanHelper.h  LASHelper.cpp  LASHelper.h  TinyEKFHelper.cpp  TinyEKFHelper.h  Utility.h  ViewerHelper.h
piping/: ProcessorPipe.hpp
